src/objects/CventEvents__OpportunityConfiguration__c.object
<CustomObject>
    <description>Stores the configuration for the automatic opportunity creation.</description>
    <fields>
        <fullName>CventEvents__AccountAssignmentRule__c</fullName>
        <description>Indicates the Account assignment rule for the Opportunity.</description>
        <inlineHelpText>Indicates the Account assignment rule for the Opportunity.</inlineHelpText>
        <label>Account Assignment Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to Contact&apos;s Account</fullName>
                </value>
                <value>
                    <fullName>Assign to specific Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__ActionType__c</fullName>
        <description>Indicates what action should be taken on opportunity.</description>
        <inlineHelpText>Indicates what action should be taken on opportunity.</inlineHelpText>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create New</fullName>
                </value>
                <value>
                    <fullName>Update Existing</fullName>
                    <default>true</default>
                    <label>Update Existing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__CampaignAssignmentRule__c</fullName>
        <description>Indicates the Campaign assignment rule for the Opportunity Primary Campaign Source.</description>
        <inlineHelpText>Indicates the Campaign assignment rule for the Opportunity Primary Campaign Source.</inlineHelpText>
        <label>Campaign Assignment Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to specific Campaign</fullName>
                </value>
                <value>
                    <fullName>Campaign most recently linked to event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__CloseDateRule__c</fullName>
        <description>Indicates the logic of population the Opportunity Close Date field.</description>
        <inlineHelpText>Indicates the logic of population the Opportunity Close Date field.</inlineHelpText>
        <label>Close Date Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
                <value>
                    <fullName>A certain number of days after the object is created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__ContactAssignmentRule__c</fullName>
        <description>Indicates the Contact assignment rule for the Opportunity Contact Role.</description>
        <inlineHelpText>Indicates the Contact assignment rule for the Opportunity Contact Role.</inlineHelpText>
        <label>Contact Assignment Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to Attendee&apos;s Contact</fullName>
                </value>
                <value>
                    <fullName>Assign to specific Contact</fullName>
                </value>
                <value>
                    <fullName>Do not create a contact role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Opportunity Configuration is active.</description>
        <inlineHelpText>Indicates whether the Opportunity Configuration is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsExistingRecordScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Opportunity will be created in case of a single SF prospect has been matched with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Opportunity will be created in case of existing SF Contact has been matched with the Cvent Contact.</inlineHelpText>
        <label>Single Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsMultipleExistingRecordsScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Opportunity will be created in case of multiple SF prospects has been matched with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Opportunity will be created in case of multiple SF prospects has been matched with Cvent contact.</inlineHelpText>
        <label>Multiple Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsNewRecordScenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Opportunity will be created in case of new SF prospect has been created and associated with Cvent contact.</description>
        <inlineHelpText>Indicates whether the Opportunity will be created in case of new SF Contact has been created and associated with the Cvent Contact.</inlineHelpText>
        <label>No Match Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__NumberOfDays__c</fullName>
        <description>Stores the number of days between the Opportunity creation and Opportunity Close Date.</description>
        <inlineHelpText>Stores the number of days between the Opportunity creation and Opportunity Close Date.</inlineHelpText>
        <label>Number Of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account of the Opportunity in case of &apos;Assign to specific Account&apos; rule.</description>
        <inlineHelpText>Account of the Opportunity in case of &apos;Assign to specific Account&apos; rule.</inlineHelpText>
        <label>Opportunity Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OpportunityConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityAmountString__c</fullName>
        <description>Amount value of the Opportunity. Has text type in order to keep data tags in addition to numeric values. Replaces OpportunityAmount__c field which has been deprecated.</description>
        <inlineHelpText>Amount value of the Opportunity.</inlineHelpText>
        <label>Opportunity Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityAmount__c</fullName>
        <description>Has been replaced by OpportunityAmountString</description>
        <inlineHelpText>Amount value of the Opportunity.</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Campaign Source value of the Opportunity.</description>
        <inlineHelpText>Primary Campaign Source value of the Opportunity.</inlineHelpText>
        <label>Opportunity Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>OpportunityConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityCloseDate__c</fullName>
        <description>Close Date of the Opportunity.</description>
        <inlineHelpText>Close Date of the Opportunity.</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityContactRole__c</fullName>
        <description>Role of the Opportunity Contact Role.</description>
        <inlineHelpText>Role of the Opportunity Contact Role.</inlineHelpText>
        <label>Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact of the Opportunity Contact Role in case of &apos;Assign to specific Contact&apos; rule.</description>
        <inlineHelpText>Contact of the Opportunity Contact Role in case of &apos;Assign to specific Contact&apos; rule.</inlineHelpText>
        <label>Opportunity Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>OpportunityConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityDescription__c</fullName>
        <description>Description of the Opportunity.</description>
        <inlineHelpText>Description of the Opportunity.</inlineHelpText>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityIsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Private value of the Opportunity.</description>
        <inlineHelpText>Is Private value of the Opportunity.</inlineHelpText>
        <label>Opportunity Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityLeadSource__c</fullName>
        <description>Lead Source of the Opportunity.</description>
        <inlineHelpText>Lead Source of the Opportunity.</inlineHelpText>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityName__c</fullName>
        <description>Name of the Opportunity.</description>
        <inlineHelpText>Name of the Opportunity.</inlineHelpText>
        <label>Opportunity Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Opportunity in case of &apos;Assign to specific User&apos; rule.</description>
        <inlineHelpText>Owner of the Opportunity in case of &apos;Assign to specific User&apos; rule.</inlineHelpText>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityStage__c</fullName>
        <description>Stage of the Opportunity.</description>
        <inlineHelpText>Stage of the Opportunity.</inlineHelpText>
        <label>Opportunity Stage</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityType__c</fullName>
        <description>Type of the Opportunity.</description>
        <inlineHelpText>Type of the Opportunity.</inlineHelpText>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__OwnerAssignmentRule__c</fullName>
        <description>Indicates the assignment rule for the Opportunity owner.</description>
        <inlineHelpText>Indicates the assignment rule for the Opportunity owner.</inlineHelpText>
        <label>Owner Assignment Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to Contact&apos;s owner</fullName>
                </value>
                <value>
                    <fullName>Assign to specific User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Configuration</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__OpportunityName__c</columns>
        <columns>CventEvents__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Opportunity Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>